<resources>
    <string name="app_name">Jeans Factory</string>
    <string name="action_settings">Settings</string>
    <string name="emptyString">You must select a value to continue...</string>
    <string name="waist_size">Waist Size</string>
    <string name="length">Length</string>
    <string name="style">Style</string>
    <string name="order">Order</string>
    <string name="cancel">Cancel</string>
    <string name="orderString">Order</string>
    <string-array name="waist">
        <item> </item>
        <item>28</item>
        <item>30</item>
        <item>32</item>
        <item>34</item>
        <item>36</item>
        <item>38</item>
        <item>40</item>
    </string-array>
    <string-array name="length">
        <item> </item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
    </string-array>
    <string-array name="style">
        <item> </item>
        <item>straight</item>
        <item>slim</item>
        <item>relaxed</item>
    </string-array>

</resources>
